# simplistis

./: Cargo.toml  README.md
src/: content.rs  lib.rs  main.rs  pages.rs  preparser.rs
test_files/: _index.md  template.hbs
test_files/blog/: _index.md  content.hbs  template.html  test-hello.md
test_files/index/contents/: test-hello.md
